# NEF-Pipelines

./: .gitignore  .pre-commit-config.yaml  .versionner.rc  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  README_other_installation_methods.md  TODO.md  design_overview.md  nef  pyproject.toml  release_to_pypi.sh  requirements.txt  setup.cfg  setup.py  test_mcp_server_guide.md  tox.ini
.github/workflows/: ci.yml  test.yml  test_installation.yml
data/chem_comp/: DNA+A+msd_ccpnRef_2007-12-11-10-13-15_00001.json  DNA+C+msd_ccpnRef_2007-12-11-10-13-16_00002.json  DNA+G+msd_ccpnRef_2007-12-11-10-13-16_00005.json  DNA+I+msd_ccpnRef_2007-12-11-10-13-17_00002.json  DNA+T+msd_ccpnRef_2007-12-11-10-13-17_00005.json  DNA+U+msd_ccpnRef_2007-12-11-10-13-17_00008.json  DNA+Xxx+pdbe_ccpnRef_2009-07-30-11-31-14-969_00001.json  RNA+A+msd_ccpnRef_2007-12-11-10-13-18_00001.json  RNA+C+msd_ccpnRef_2007-12-11-10-13-18_00004.json  RNA+G+msd_ccpnRef_2007-12-11-10-13-19_00001.json  RNA+I+msd_ccpnRef_2007-12-11-10-13-19_00004.json  RNA+T+msd_ccpnRef_2007-12-11-10-13-19_00007.json  RNA+U+msd_ccpnRef_2007-12-11-10-13-20_00001.json  RNA+Xxx+pdbe_ccpnRef_2009-07-30-11-31-15-197_00001.json  protein+Ala+msd_ccpnRef_2007-12-11-10-20-09_00022.json  protein+Arg+msd_ccpnRef_2007-12-11-10-20-10_00007.json  protein+Asn+msd_ccpnRef_2007-12-11-10-20-10_00013.json  protein+Asp+msd_ccpnRef_2007-12-11-10-20-10_00001.json  protein+Cys+msd_ccpnRef_2007-12-11-10-20-13_00005.json  protein+Gln+msd_ccpnRef_2007-12-11-10-20-15_00017.json  protein+Glu+msd_ccpnRef_2007-12-11-10-20-15_00018.json  protein+Gly+msd_ccpnRef_2007-12-11-10-20-15_00019.json  protein+His+msd_ccpnRef_2007-12-11-10-20-16_00013.json  protein+Ile+msd_ccpnRef_2007-12-11-10-20-17_00003.json  protein+Leu+msd_ccpnRef_2007-12-11-10-20-17_00014.json  protein+Lys+msd_ccpnRef_2007-12-11-10-20-18_00001.json  protein+Met+msd_ccpnRef_2007-12-11-10-20-19_00001.json  protein+Phe+msd_ccpnRef_2007-12-11-10-20-22_00003.json  protein+Pro+msd_ccpnRef_2007-12-11-10-20-22_00008.json  protein+Ser+msd_ccpnRef_2007-12-11-10-20-23_00016.json  protein+Thr+msd_ccpnRef_2007-12-11-10-20-24_00014.json  protein+Trp+msd_ccpnRef_2007-12-11-10-20-25_00008.json  protein+Tyr+msd_ccpnRef_2007-12-11-10-20-26_00001.json  protein+Val+msd_ccpnRef_2007-12-11-10-20-27_00001.json  protein+Xxx+pdbe_ccpnRef_2009-07-30-11-31-14-656_00001.json
docs/: design_overview.md
from/: mars2nef.py  nmview_seq.py  nmview_shifts.py  xplor_viol_to_nef.py
importers/: nmrview_seq.py
importers/nmrview/: nmrview.py  nmrview_peaks.py
install_scripts/: basic_install.sh  install.sh  old_install.sh  uninstall.sh
installation_scripts/: install_nefp_ubuntu.sh
lib/: constants.py  header_lib.py  nef_lib.py  sequence_lib.py  shift_lib.py  structures.py  test_lib.py  typer_utils.py  util.py
lib/chem_comp/: chem_comp.py  io.py  object_iter.py
lib/translation/: chem_comp.py
nef_app/: __init__.py
old/tests/: conftest.py  test_sequence_lib.py
old/tools/: fuzzer.py  res_assign.py
plans/: cli-lib-escape-refactoring.md  commit-plan-other-modified-work.md  csv-import-shifts-plan.md  dependency-analysis.md  frames-rename-category-id-syntax.md  frames-rename-cli-pipe-split.md  frames-rename-none-inherit-refactor.md  guess-proton-frequency-snap-to-standard.md  headerless-file-column-insert.md  help-commands-testing-plan.md  mcp-doc-improvements-consume-input-as-is.md  mcp-no-sandbox-flag.md  namespace-dictionary-command.md  namespace-manipulation-utilities.md  nef-types-package-extraction.md  offset-shifts-replace-at-with-isotope-syntax.md  plan-sandbox-write-controls-prompt.md  plan-staged-commits-for-uncommitted-changes.md  plot-correlations-placeholder-help.md  qsv-integration.md  refactor-columns-reorder-replace.md  rename-semantics.md  sandbox-directory-warming.md  selector-conflict-detection.md  sparky-block-api-review.md  template-security-annotations.md  test-display-audit.md  test-display-todo-review.md  tree-fixes.md  tree-refactoring-plan.md
plans/design_docs/: design-overview.md  frame-loop-tag-selectors.md  selector-syntax-reference.md
plans/done/: circular-import-audit.md  columns-commands-plan.md  columns-insert-refactor-plan.md  columns-lib-insert-todo-cleanup.md  columns-output-routing-refactor.md  degrees-of-freedom-checking-in-fitter.md  display-comments-plan.md  drop-command-result-and-nef-execute-command.md  entry-points-plugin-architecture.md  entry-tree-command.md  expand-frame-loop-tag-wildcards.md  extract-load-nef-modules.md  fix-failing-fit-tests-and-improve-ci.md  frames-display-command.md  frames-rename-bulk-mode.md  getopt-interleaved-arg-parser.md  implement-selector-semantics.md  loops-create-plan.md  (+24 more)
references/: Nmr Experiment Nomenclature v2.docx
scripts/: check_circular.py  check_uncommitted_tests.py
src/: nef
test_data/: assignment_AAs.out  sec5.nef  sec5_assign.nef  test_header_entry.txt
tests/: Test_header.py  conftest.py  test_chem_comp.py  test_header.py  test_nef_lib.py  test_sequence_lib.py  test_tcl.py  test_test.py  test_translation.py  test_translation.py_unused
to/: nef2mars.py
tools/: fuzzer.py  header.py  list_frames.py  offset_shifts.py  renumber_residues.py  res_assign.py  stream.py  tabulate_frames.py  test.py
(+854 files in other folders)
