[project]

name = 'nef-pipelines'
version = '0.1.107'
dynamic=['description','optional-dependencies','dependencies','scripts','urls','classifiers', 'authors','license',
         'readme']

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"
